--- a/Blog/1-Qunie-2025-08-05.md
+++ b/Blog/1-Qunie-2025-08-05.md
@@ -54,4 +54,9 @@ let main argv =
 ```
 let s = "let s = {0}{1}{0}; System.Console.Write(s, (char)34, s)"
 System.Console.Write(s, (char)34, s)
-```z
+```
+
+4. GPT-5 was able to create F# code which is almost a Qunie. However when it was trying to fix remaining issues it went into endless loop of corrections which are not going anywhere.
+```
+open System; [<EntryPoint>] let main _ = let s = "open System; [<EntryPoint>] let main _ = let s = {0} in Console.WriteLine(String.Format(s, (sprintf \"%A\" s))); 0" in Console.WriteLine(String.Format(s, (sprintf "%A" s))); 0
+```
